screenshot in place

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -27,6 +27,11 @@
   padding-top: 50px;
   text-align: center;
 }
+.screen {
+  height: 50px;
+  width: 100px;
+  text-align: center;
+}
 .box-games {
   display: flex;
   justify-content: space-around;
