--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,8 +46,11 @@
   <div class= "container">
     <div class="testimonies-content-description">
       <h1><strong>A modern tool for modern players</strong></h1>
-      <p>See your games in a beautiful format on any device. Elegant and easy on the eyes, now you can focus on your Game.
-         </p>
+      <p>See your games in a beautiful format on any device.<br> Elegant and easy on the eyes, now you can focus on your Game. <br>No distractions, no ads (not yet ;-)), only the essentials to improve your game. <br>See for yourself :<br>
+      </p>
+      <div class="w-100 p-3 card-feature" style="background-color: #eee;">
+        <img src="<%= image_path('playgame_screen.png') %>" style="max-width: 100%; max-height: 100%;" alt="">
+      </div>
     </div>
   </div>
 </div>
