--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,18 +26,23 @@
       <% if controller?("games") && action?("new") %>
 
         <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+        <%#= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+
 
       <% else %>
 
         <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
 
       <% end %>
 
     <% else %>
 
       <!-- Login and signup links (when logged out) -->
-      <%= link_to t(".sign_up", default: "Sign up"), new_user_registration_path, class: "navbar-item navbar-link" %>
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %>
+              <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+
+      <%#= link_to t(".sign_up", default: "Sign up"), new_user_registration_path, class: "navbar-item navbar-link" %>
+      <%#= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %>
 
     <% end %>
 
