--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -175,3 +175,10 @@
   justify-content: center;
   margin-top: 40px;
 }
+
+.pin-right-top {
+  position: absolute;
+  right: 40px;
+  top: 10px;
+
+}
