--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -67,7 +67,7 @@
   text-decoration: none;
 }
 .navbar-link:hover {
-  color: $orange;
+  color: $coral;
   text-decoration: none;
   font-weight: bold;
 
