--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -1,4 +1,7 @@
 <div class="chess-box col-sm-8" id="chessbox">
+  <div class="pin-right-top">
+    <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+  </div>
   <% if @game.present? %>
     <div class="board">
       <div id="chessgame"></div>
