--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -5,6 +5,9 @@
       <%= render "shared/sidebar_collection" %>
 
       <div class="col-sm-10 search-page-box">
+        <div class="pin-right-top">
+          <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+        </div>
 
         <div id="chessgame-board">
           <div id="chessgame-find"></div>
