--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,12 @@
 <div class="banner" style="background-image: url(<%= image_path('chessrisebanner.png') %>);">
+  <div class="pin-right-top">
+    <% if user_signed_in? %>
+        <%= link_to "Jump in", collections_path, class: "btn btn-bold-outline btn-sm" %>
+    <% else %>
+      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "btn btn-bold-outline btn-sm" %>
+    <% end %>
+  </div>
+
   <div class="banner-content">
     <!-- <h1>ChessRise</h1> -->
     <p><span id="banner-typed-text"></span></p>
