--- a/app/assets/stylesheets/components/_collection-cards.scss
+++ b/app/assets/stylesheets/components/_collection-cards.scss
@@ -1,8 +1,10 @@
 .collection-card {
   margin-bottom: 1px;
-  padding: 10px;
+  padding: 10px 20px 10px 10px;
   font-size: 14px;
   font-weight: lighter;
+  display: flex;
+  justify-content: space-between;
 }
 .collection-card:hover {
   font-weight: bold;
