--- a/app/assets/stylesheets/layouts/_sidebar_collection.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_collection.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to bottom right, #EDEDEE , white);
   transition: all 0.3s;
   padding: 0;
-  height: calc(100vh - 70px);
+  height: 100vh;
   border-right: 1px solid LightGray
 }
 
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid LightGray
 }
 
 .sidebar-games-title{
