--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -1,10 +1,15 @@
 #sidebar-games {
-    height: calc(100vh - 70px);
+    height: 100vh;
     background: White;
     transition: all 0.3s;
     padding: 0;
     border-right: solid 1px LightGray;
-    overflow-y: scroll;
+    // overflow-y: scroll;
+}
+
+.list-of-games {
+  height: calc(100vh - 86px);
+  overflow-y: scroll;
 }
 
 
