--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -6,7 +6,7 @@
 
       <div class="col-sm-10 search-page-box">
         <div class="pin-right-top">
-          <%= link_to search_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+          <%= link_to search_path, class: "btn btn-primary" do %><i class='fas fa-search'></i> New search<% end %>
         </div>
 
         <div id="chessgame-board">
