--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if games.present? %>
-    <p>Number of results: <%= games.count %></p>
+    <p>We found <%= games.count %> games!</p>
 
     <% games.each do |game| %>
 
