--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -1,6 +1,6 @@
 <div class="results">
   <div class="results-header">
-    We found <%= games.count %> games! %>
+    We found <%= games.count %> games!
   </div>
 
 
