--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 5px;
+  align-items: center;
 }
 
 .header-box-item-player{
@@ -70,8 +71,22 @@
   color: black;
   font-size: 30px;
 }
+
 .chess-moves {
   padding: 10px;
+  overflow-y: scroll
+}
+
+.chess-moves-view {
+  padding: 10px;
+  max-height: 275px;
+  overflow-y: scroll;
+}
+
+.chess-moves-find {
+  padding: 10px;
+  max-height: 275px;
+  overflow-y: scroll;
 }
 
 #chessgame {
@@ -123,8 +138,8 @@
   border: 1px solid lightgrey;
   margin-left: 25px;
   margin-right: 20px;
-  height: 550px;
-  overflow-y: scroll;
+  height: 375px;
+  // overflow-y: scroll;
 }
 .game-notation-input {
   // width: 100%;
