search page rework

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -229,6 +229,26 @@
 .pin-right-top {
   position: absolute;
   right: 40px;
-  top: 10px;
+  top: 20px;
+}
+
+.pin-right-left {
+  position: absolute;
+  left: 40px;
+  top: 20px;
 
 }
+
+.search-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.search-description {
+  font-size: 16px;
+  margin-top: -14px;
+}
+
+
+
+
