--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -61,7 +61,7 @@
 
   <% else %>
 
-    <p>Enter a position and hit find games to explore master games.</p>
+<!--     <p>Enter a position and hit find games to explore master games.</p> -->
 
   <% end %>
 
