--- a/app/assets/stylesheets/layouts/_search.scss
+++ b/app/assets/stylesheets/layouts/_search.scss
@@ -1,6 +1,6 @@
 .search-page-box {
   display: flex;
-  padding-top: 100px;
+  padding-top: 150px;
   justify-content: space-around;
 }
 
@@ -10,7 +10,8 @@
   overflow-y: scroll;
   display:flex;
   justify-content: center;
-  max-width: 320px;
+  // max-width: 320px;
+  width: 320px;
 }
 
 .search-input-notation {
