--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -5,6 +5,11 @@
       <%= render "shared/sidebar_collection" %>
 
       <div class="col-sm-10 search-page-box">
+        <div class="pin-right-left">
+          <p class="search-title">Search games by position</p>
+          <p class="search-description">Drag pieces on the board and hit find games to explore master games.</p>
+        </div>
+
         <div class="pin-right-top">
           <%= link_to search_path, class: "btn btn-primary" do %><i class='fas fa-search'></i> New search<% end %>
         </div>
@@ -13,7 +18,13 @@
           <div id="chessgame-find"></div>
           <div id="fen" data-fen="<%=@search_fen%>"></div>
           <div id="moves" data-moves="<%= @moves_string %>"></div>
-          <%= render "shared/chess_box_controls" %>
+
+          <% if @search_fen == @initial_fen && @games.nil? %>
+            <div class="find-button">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token, id: "token" %>
+              <button id="find-game-button" class="btn btn-primary">Find games</button>
+            </div>
+          <% end %>
         </div>
 
         <div class="search-notation">
@@ -22,7 +33,6 @@
 
             <div class="search-input-notation">
               <div class="search-headers">
-                Search games by position
               </div>
 
               <div class="moves-input">
@@ -41,11 +51,6 @@
               </div>
             </div>
 
-
-            <div class="find-button">
-              <%= hidden_field_tag :authenticity_token, form_authenticity_token, id: "token" %>
-              <button id="find-game-button" class="btn btn-primary">Find games</button>
-            </div>
 
           </div>
 
