--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,7 +38,9 @@
   color: white;
   background-color: $coral ;
   padding: 10px 15px;
-  border-radius: 4px;
+  // border-radius: 4px;
+  border: none;
+  line-height: 1;
   // font-weight: bold;
   transition: background 0.3s ease;
 }
