--- a/app/assets/stylesheets/layouts/_sidebar_collection.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_collection.scss
@@ -26,9 +26,12 @@
 .sidebar-header {
   width: 100%;
   padding: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
   font-size: 20px;
   font-weight: bold;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid LightGray
@@ -44,5 +47,7 @@
   left: 10px;
   bottom: 10px;
   font-size: 30px;
+  cursor: pointer;
 }
+
 
