--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -36,8 +36,9 @@
 
 .btn-bold-outline {
   color: white;
-  background-color: $coral ;
+  background-color: $blue ;
   padding: 10px 15px;
+  font-size: 12px;
   // border-radius: 4px;
   border: none;
   line-height: 1;
