--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -130,6 +130,11 @@
   margin-top: 40px;
 }
 
+.coral {
+  background-color: $coral;
+  border-color: $coral;
+}
+
 .chess-board {
   background-color: white;
 }
