--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -12,4 +12,8 @@
   overflow-y: scroll;
 }
 
-
+// .reversed-button {
+//   color: #1E5772 !important;
+//   border: 1px solid #1E5772 !important;
+//   background-color: white !important;
+// }
