--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -139,7 +139,7 @@
 }
 
 .search-header-result{
-  background: #2d5770;
+  background: #6b6b6b;
   font-weight: bold;
   color: white;
   border-radius: 5px;
