--- a/app/views/shared/_sidebar_game.html.erb
+++ b/app/views/shared/_sidebar_game.html.erb
@@ -10,7 +10,7 @@
 
     <% else %>
 
-      <div class="sidebar-games-title">
+      <div class="sidebar-games-title" style="color:black">
         <p><%= @collection.name %> <span id="game-counter-<%= @collection.id %>"> (<%= @collection.games.count %>)</span></p>
       </div>
 
