--- a/app/assets/stylesheets/layouts/_sidebar_collection.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_collection.scss
@@ -9,9 +9,11 @@
 
 .sidebar-collection-header {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 20px;
   font-weight: bold;
-  justify-content: center;
+  // justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 20px;
 }
