--- a/app/assets/stylesheets/components/_collection-cards.scss
+++ b/app/assets/stylesheets/components/_collection-cards.scss
@@ -1,6 +1,6 @@
 .collection-card {
   margin-bottom: 1px;
-  padding: 10px 20px 10px 10px;
+  padding: 15px 20px 0px 10px;
   font-size: 14px;
   font-weight: lighter;
   display: flex;
@@ -41,7 +41,6 @@ a:hover {
 
 .collection-card-persist {
   font-weight: bold;
-  font-style: italic;
-  background-color: #1E5772;
+  background-color: #3183A8;
   color: white;
 }
