--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -40,7 +40,25 @@
 
             <div class="search-input-notation">
               <div class="search-headers">
-                  Your moves
+
+                  <p>Your moves</p>
+
+<!--                   <% if @moves.present? %>
+
+                    <% @moves.each_with_index do |move, index| %>
+
+                      <% if (@moves.count % 2).zero? %>
+                        <span class="smaller-font italique">It's White Player's turn to play.</span>
+                      <% else  %>
+                        <span class="smaller-font italique">It's Black Player's turn to play.</span>
+                      <% end %>
+
+                    <% end %>
+
+                  <% else %>
+                    <span class="smaller-font italique">It's Black Player's turn to play.</span>
+                  <% end %> -->
+
               </div>
 
               <div class="moves-input">
